--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "request": "2.83.0",
     "request-debug": "0.2.0",
     "url-parse": "1.2.0",
+    "vue": "2.5.13",
+    "vue-router": "3.0.1",
     "whatwg-fetch": "2.0.3",
     "winston": "2.4.0"
   },
@@ -96,6 +98,8 @@
     "sass-loader": "6.0.6",
     "style-loader": "0.19.1",
     "url-loader": "0.6.2",
+    "vue-loader": "13.7.0",
+    "vue-template-compiler": "2.5.13",
     "webpack": "3.10.0",
     "webpack-manifest-plugin": "1.3.2",
     "webpack-merge": "4.1.1",
