--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "koa",
     "es6",
     "webpack",
-    "react",
+    "vue",
     "bootstrap",
     "fullstack",
     "framework"
@@ -57,8 +57,6 @@
     "nunjucks": "3.0.1",
     "prop-types": "15.6.0",
     "qs": "6.5.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
     "request": "2.83.0",
     "request-debug": "0.2.0",
     "url-parse": "1.2.0",
@@ -78,7 +76,6 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
     "chai": "4.1.2",
     "clean-webpack-plugin": "0.1.17",
     "copy-webpack-plugin": "4.3.1",
@@ -87,7 +84,6 @@
     "del": "3.0.0",
     "eslint": "4.15.0",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-react": "7.5.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "html-loader": "0.5.5",
