--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "cross-env ENABLE_HMR=true node app.js",
     "start": "node app.js",
     "deploy": "./deploy.sh",
-    "build": "webpack --progress --config config/webpack.config.dev.js",
-    "watch": "webpack --watch --progress --config config/webpack.config.dev.js",
+    "build": "webpack --progress --config --hide-modules config/webpack.config.dev.js",
+    "watch": "webpack --watch --progress --hide-modules --config config/webpack.config.dev.js",
     "node": "webpack --progress --config config/webpack.config.node.js",
     "prod": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --config config/webpack.config.prod.js && echo '\n===Build for Production Done!==='",
     "prod:analyze": "cross-env NODE_ENV=production BUNDLE_ANALYZER=true webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
@@ -85,12 +85,15 @@
     "autoprefixer": "8.2.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
+    "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "7.1.4",
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-lodash": "3.3.2",
+    "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
+    "babel-plugin-transform-vue-jsx": "3.7.0",
     "babel-preset-env": "1.6.1",
     "chai": "4.1.2",
     "clean-webpack-plugin": "0.1.19",
