:bug:script fix

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "cross-env ENABLE_HMR=true node app.js",
     "start": "node app.js",
     "deploy": "./deploy.sh",
-    "build": "webpack --progress --config --hide-modules config/webpack.config.dev.js",
-    "watch": "webpack --watch --progress --hide-modules --config config/webpack.config.dev.js",
+    "build": "webpack --progress  --hide-modules --config config/webpack.config.dev.js",
+    "watch": "webpack --watch --hide-modules --progress --config config/webpack.config.dev.js",
     "node": "webpack --progress --config config/webpack.config.node.js",
     "prod": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --config config/webpack.config.prod.js && echo '\n===Build for Production Done!==='",
     "prod:analyze": "cross-env NODE_ENV=production BUNDLE_ANALYZER=true webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
