--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "webpack --progress  --hide-modules --config config/webpack.config.dev.js",
     "watch": "webpack --watch --hide-modules --progress --config config/webpack.config.dev.js",
     "node": "webpack --progress --config config/webpack.config.node.js",
-    "prod": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --config config/webpack.config.prod.js && echo '\n===Build for Production Done!==='",
+    "prod": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
     "prod:analyze": "cross-env NODE_ENV=production BUNDLE_ANALYZER=true webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
     "es6-module-to-commonjs": "babel test/es6/modules -d build/test/es6/modules --plugins transform-es2015-modules-commonjs",
     "test": "./node_modules/.bin/_mocha ./test/mocha",
