--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
       "env",
       {
         "targets": {
-          "browsers": ["> 1%", "last 2 versions"]
+          "browsers": ["> 0.5%", "not ie 11", "not op_mini all"]
         },
         "loose": true,
         "useBuiltIns": true,
@@ -16,7 +16,9 @@
     "lodash",
     "transform-runtime",
     "transform-object-rest-spread",
-    "transform-vue-jsx"
+    "transform-vue-jsx",
+    "transform-class-properties",
+    "syntax-dynamic-import"
   ],
   "comments": false
 }
