--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "name": "vue-web-kit",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "A modern, production-ready, and full-stack node web framework with Vue.js",
   "main": "index.js",
   "scripts": {
     "dev": "cross-env ENABLE_HMR=true node app.js",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "deploy": "./deploy.sh",
-    "build": "webpack --progress  --hide-modules --config config/webpack.config.dev.js",
+    "deploy:noinstall": "npm run deploy -- 1",
+    "build:dev": "webpack --progress  --hide-modules --config config/webpack.config.dev.js",
+    "build": "npm run prod",
     "watch": "webpack --watch --hide-modules --progress --config config/webpack.config.dev.js",
     "node": "webpack --progress --config config/webpack.config.node.js",
     "prod": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
     "prod:analyze": "cross-env NODE_ENV=production BUNDLE_ANALYZER=true webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
-    "es6-module-to-commonjs": "babel test/es6/modules -d build/test/es6/modules --plugins transform-es2015-modules-commonjs",
     "test": "./node_modules/.bin/_mocha ./test/mocha",
-    "precommit": "lint-staged",
-    "build:wd": "webpack-dashboard -- npm run build",
-    "watch:wd": "webpack-dashboard -- npm run watch",
-    "dev:wd": "webpack-dashboard -- npm run dev"
+    "precommit": "lint-staged"
   },
   "engines": {
     "node": ">= 8"
   },
   "lint-staged": {
-    "**/*.{js,jsx}": [
+    "**/*.{js,jsx,vue,scss,json,html}": [
       "prettier --write",
       "git add"
     ]
@@ -50,85 +48,97 @@
   "readme": "README.md",
   "dependencies": {
     "bluebird": "3.5.1",
-    "bootstrap": "4.0.0",
-    "chalk": "2.3.2",
+    "bootstrap": "4.1.3",
+    "chalk": "2.4.1",
     "consolidate": "0.15.1",
-    "get-port": "3.2.0",
-    "koa": "2.5.0",
-    "koa-body": "2.5.0",
-    "koa-compress": "2.0.0",
+    "get-port": "4.0.0",
+    "koa": "2.5.2",
+    "koa-body": "4.0.4",
+    "koa-compress": "3.0.0",
     "koa-convert": "1.2.0",
-    "koa-helmet": "3.3.0",
+    "koa-helmet": "4.0.0",
     "koa-history-api-fallback": "0.1.3",
     "koa-morgan": "1.0.1",
     "koa-mount": "3.0.0",
     "koa-router": "7.4.0",
-    "koa-session": "5.8.1",
-    "koa-static": "4.0.2",
+    "koa-session": "5.8.2",
+    "koa-static": "5.0.0",
     "koa-views": "6.1.4",
-    "lodash": "4.17.5",
+    "lodash": "4.17.10",
     "lodash.isempty": "4.4.0",
-    "moment": "2.21.0",
-    "nunjucks": "3.1.2",
-    "pm2": "2.10.1",
-    "prop-types": "15.6.1",
-    "qs": "6.5.1",
-    "request": "2.85.0",
+    "moment": "2.22.2",
+    "nunjucks": "3.1.3",
+    "pm2": "2.10.4",
+    "qs": "6.5.2",
+    "request": "2.87.0",
     "request-debug": "0.2.0",
-    "url-parse": "1.2.0",
+    "url-parse": "1.4.3",
     "vue": "2.5.16",
     "vue-router": "3.0.1",
-    "whatwg-fetch": "2.0.3",
+    "whatwg-fetch": "2.0.4",
     "winston": "2.4.1"
   },
   "devDependencies": {
-    "autoprefixer": "8.2.0",
+    "autoprefixer": "9.0.2",
     "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "babel-loader": "7.1.4",
+    "babel-loader": "7.1.5",
     "babel-minify-webpack-plugin": "0.3.1",
-    "babel-plugin-lodash": "3.3.2",
+    "babel-plugin-lodash": "3.3.4",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-syntax-jsx": "6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-transform-vue-jsx": "3.7.0",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.7.0",
     "chai": "4.1.2",
     "clean-webpack-plugin": "0.1.19",
-    "copy-webpack-plugin": "4.5.1",
-    "cross-env": "5.1.4",
-    "css-loader": "0.28.11",
+    "copy-webpack-plugin": "4.5.2",
+    "cross-env": "5.2.0",
+    "css-loader": "1.0.0",
     "del": "3.0.0",
-    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
     "html-webpack-inline-chunk-plugin": "1.1.1",
-    "html-webpack-plugin": "2.30.1",
+    "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
-    "koa-webpack": "2.0.3",
-    "lint-staged": "7.0.0",
-    "mocha": "5.0.5",
-    "moment-locales-webpack-plugin": "1.0.5",
-    "node-sass": "4.8.3",
-    "postcss-loader": "2.1.3",
-    "prettier": "1.11.1",
-    "sass-loader": "6.0.7",
-    "style-loader": "0.20.3",
-    "uglifyjs-webpack-plugin": "1.2.4",
+    "koa-webpack": "5.1.0",
+    "lint-staged": "7.2.0",
+    "mini-css-extract-plugin": "0.4.1",
+    "mocha": "5.2.0",
+    "moment-locales-webpack-plugin": "1.0.7",
+    "node-sass": "4.9.2",
+    "optimize-css-assets-webpack-plugin": "5.0.0",
+    "postcss-loader": "2.1.6",
+    "prettier": "1.14.0",
+    "sass-loader": "7.0.3",
+    "style-loader": "0.21.0",
+    "uglifyjs-webpack-plugin": "1.2.7",
     "url-loader": "1.0.1",
-    "vue-loader": "14.2.2",
+    "vue-loader": "15.2.6",
     "vue-template-compiler": "2.5.16",
-    "webpack": "3.11.0",
-    "webpack-bundle-analyzer": "2.11.1",
-    "webpack-dashboard": "1.1.1",
-    "webpack-manifest-plugin": "1.3.2",
-    "webpack-merge": "4.1.2",
-    "webpack-node-externals": "1.6.0"
+    "webpack": "4.16.3",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-cli": "3.1.0",
+    "webpack-manifest-plugin": "2.0.3",
+    "webpack-merge": "4.1.3",
+    "webpack-node-externals": "1.7.2"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "> 0.5%",
+    "not ie 11",
+    "not op_mini all"
+  ],
+  "nodemonConfig": {
+    "watch": [
+      "api/",
+      "config/",
+      "build/node",
+      "routes/",
+      "utils/",
+      "services/"
+    ]
+  }
 }
