--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
   "engines": {
     "node": ">= 8"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "**/*.{js,jsx,vue,scss,json,html}": [
-      "prettier --write",
-      "git add"
-    ]
+    "linters": {
+      "**/*.{js,jsx,vue,scss,json,html}": [
+        "prettier --write",
+        "git add"
+      ]
+    }
   },
   "repository": {
     "type": "git",
@@ -47,39 +54,37 @@
   "homepage": "https://github.com/JasonBoy/vue-web-kit#readme",
   "readme": "README.md",
   "dependencies": {
-    "bluebird": "3.5.1",
-    "bootstrap": "4.1.3",
+    "bootstrap": "4.2.1",
     "chalk": "2.4.1",
     "consolidate": "0.15.1",
-    "get-port": "4.0.0",
-    "koa": "2.5.2",
-    "koa-body": "4.0.4",
+    "koa": "2.6.2",
+    "koa-body": "4.0.6",
     "koa-compress": "3.0.0",
     "koa-convert": "1.2.0",
     "koa-helmet": "4.0.0",
     "koa-history-api-fallback": "0.1.3",
     "koa-morgan": "1.0.1",
-    "koa-mount": "3.0.0",
+    "koa-mount": "4.0.0",
     "koa-router": "7.4.0",
-    "koa-session": "5.8.2",
+    "koa-session": "5.10.1",
     "koa-static": "5.0.0",
-    "koa-views": "6.1.4",
-    "lodash": "4.17.10",
+    "koa-views": "6.1.5",
+    "lodash": "4.17.11",
     "lodash.isempty": "4.4.0",
-    "moment": "2.22.2",
-    "nunjucks": "3.1.3",
-    "pm2": "3.2.2",
-    "qs": "6.5.2",
-    "request": "2.87.0",
+    "moment": "2.23.0",
+    "nunjucks": "3.1.6",
+    "pm2": "3.2.4",
+    "qs": "6.6.0",
+    "request": "2.88.0",
     "request-debug": "0.2.0",
-    "url-parse": "1.4.3",
-    "vue": "2.5.16",
-    "vue-router": "3.0.1",
+    "url-parse": "1.4.4",
+    "vue": "2.5.21",
+    "vue-router": "3.0.2",
     "whatwg-fetch": "2.0.4",
     "winston": "2.4.1"
   },
   "devDependencies": {
-    "autoprefixer": "9.0.2",
+    "autoprefixer": "9.4.4",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
@@ -93,9 +98,9 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-transform-vue-jsx": "3.7.0",
     "babel-preset-env": "1.7.0",
-    "chai": "4.1.2",
-    "clean-webpack-plugin": "0.1.19",
-    "copy-webpack-plugin": "4.5.2",
+    "chai": "4.2.0",
+    "clean-webpack-plugin": "1.0.0",
+    "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.2.0",
     "css-loader": "1.0.0",
     "del": "3.0.0",
@@ -103,26 +108,26 @@
     "html-loader": "0.5.5",
     "html-webpack-inline-chunk-plugin": "1.1.1",
     "html-webpack-plugin": "3.2.0",
-    "husky": "0.14.3",
-    "koa-webpack": "5.1.0",
-    "lint-staged": "7.2.0",
+    "husky": "1.3.1",
+    "koa-webpack": "5.1.1",
+    "lint-staged": "8.1.0",
     "mini-css-extract-plugin": "0.4.1",
     "mocha": "5.2.0",
     "moment-locales-webpack-plugin": "1.0.7",
-    "node-sass": "4.9.2",
+    "node-sass": "4.11.0",
     "postcss-loader": "2.1.6",
-    "prettier": "1.15.2",
-    "sass-loader": "7.0.3",
-    "style-loader": "0.21.0",
+    "prettier": "1.15.3",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.0",
     "uglifyjs-webpack-plugin": "1.2.7",
-    "url-loader": "1.0.1",
-    "vue-loader": "15.2.6",
-    "vue-template-compiler": "2.5.16",
+    "url-loader": "1.1.2",
+    "vue-loader": "15.5.0",
+    "vue-template-compiler": "2.5.21",
     "webpack": "4.16.3",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "3.1.0",
-    "webpack-manifest-plugin": "2.0.3",
-    "webpack-merge": "4.1.3",
+    "webpack-manifest-plugin": "2.0.4",
+    "webpack-merge": "4.2.1",
     "webpack-node-externals": "1.7.2"
   },
   "browserslist": [
