:scissors:Remove mocha and old test files

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": "webpack --progress --config config/webpack.config.node.js",
     "prod": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
     "prod:analyze": "cross-env NODE_ENV=production BUNDLE_ANALYZER=true webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
-    "test": "./node_modules/.bin/_mocha ./test/mocha",
+    "test": "npm run build:dev && npm run build",
     "precommit": "lint-staged"
   },
   "engines": {
@@ -98,12 +98,10 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-transform-vue-jsx": "3.7.0",
     "babel-preset-env": "1.7.0",
-    "chai": "4.2.0",
     "clean-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.2.0",
     "css-loader": "1.0.0",
-    "del": "3.0.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
     "html-webpack-inline-chunk-plugin": "1.1.1",
@@ -112,7 +110,6 @@
     "koa-webpack": "5.1.1",
     "lint-staged": "8.1.0",
     "mini-css-extract-plugin": "0.4.1",
-    "mocha": "5.2.0",
     "moment-locales-webpack-plugin": "1.0.7",
     "node-sass": "4.11.0",
     "postcss-loader": "2.1.6",
