--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,7 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "browsers": ["> 0.5%", "not ie 11", "not op_mini all"]
-        },
-        "loose": true,
-        "useBuiltIns": true,
-        "modules": false
-      }
-    ]
-  ],
-  "plugins": [
-    "lodash",
-    "transform-runtime",
-    "transform-object-rest-spread",
-    "transform-vue-jsx",
-    "transform-class-properties",
-    "syntax-dynamic-import"
-  ],
-  "comments": false
+  "env": {
+    "test": {
+      "presets": [["@babel/preset-env"]]
+    }
+  }
 }
