--- a/package.json
+++ b/package.json
@@ -84,20 +84,25 @@
     "winston": "2.4.1"
   },
   "devDependencies": {
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
+    "@babel/helper-module-imports": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-syntax-jsx": "7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "7.2.0",
+    "@babel/plugin-transform-react-jsx-source": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.2.3",
+    "@babel/preset-react": "7.0.0",
+    "@babel/runtime": "7.2.0",
     "autoprefixer": "9.4.4",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "babel-loader": "7.1.5",
+    "babel-loader": "8.0.4",
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-syntax-jsx": "6.18.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-plugin-transform-vue-jsx": "3.7.0",
-    "babel-preset-env": "1.7.0",
+    "babel-plugin-transform-vue-jsx": "4.0.1",
     "clean-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.2.0",
