--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch": "webpack --watch --hide-modules --progress --config config/webpack.config.dev.js",
     "node": "webpack --progress --config config/webpack.config.node.js",
     "prod": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
-    "prod:analyze": "cross-env NODE_ENV=production BUNDLE_ANALYZER=true webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
+    "report": "cross-env NODE_ENV=production BUNDLE_ANALYZER=true webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
     "test": "npm run build:dev && npm run build",
     "precommit": "lint-staged"
   },
@@ -99,7 +99,7 @@
     "@babel/runtime": "7.2.0",
     "autoprefixer": "9.4.4",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "babel-loader": "8.0.4",
+    "babel-loader": "8.0.5",
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-vue-jsx": "4.0.1",
@@ -114,20 +114,20 @@
     "husky": "1.3.1",
     "koa-webpack": "5.1.1",
     "lint-staged": "8.1.0",
-    "mini-css-extract-plugin": "0.4.1",
+    "mini-css-extract-plugin": "0.5.0",
     "moment-locales-webpack-plugin": "1.0.7",
     "node-sass": "4.11.0",
-    "postcss-loader": "2.1.6",
+    "postcss-loader": "3.0.0",
     "prettier": "1.15.3",
     "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
-    "uglifyjs-webpack-plugin": "1.2.7",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.2.1",
     "url-loader": "1.1.2",
     "vue-loader": "15.5.0",
     "vue-template-compiler": "2.5.21",
-    "webpack": "4.16.3",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.1.0",
+    "webpack": "4.28.3",
+    "webpack-bundle-analyzer": "3.0.3",
+    "webpack-cli": "3.2.0",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-merge": "4.2.1",
     "webpack-node-externals": "1.7.2"
