--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
   "readme": "README.md",
   "dependencies": {
     "bootstrap": "4.2.1",
-    "chalk": "2.4.1",
+    "chalk": "2.4.2",
     "consolidate": "0.15.1",
-    "koa": "2.6.2",
-    "koa-body": "4.0.6",
+    "koa": "2.7.0",
+    "koa-body": "4.0.8",
     "koa-compress": "3.0.0",
     "koa-convert": "1.2.0",
     "koa-helmet": "4.0.0",
@@ -71,14 +71,14 @@
     "koa-views": "6.1.5",
     "lodash": "4.17.11",
     "lodash.isempty": "4.4.0",
-    "moment": "2.23.0",
-    "nunjucks": "3.1.6",
+    "moment": "2.24.0",
+    "nunjucks": "3.1.7",
     "pm2": "3.2.4",
     "qs": "6.6.0",
     "request": "2.88.0",
     "request-debug": "0.2.0",
     "url-parse": "1.4.4",
-    "vue": "2.5.21",
+    "vue": "2.6.5",
     "vue-router": "3.0.2",
     "whatwg-fetch": "2.0.4",
     "winston": "2.4.1"
@@ -87,23 +87,23 @@
     "@babel/cli": "7.2.3",
     "@babel/core": "7.2.2",
     "@babel/helper-module-imports": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.2",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.2.0",
     "@babel/plugin-transform-react-jsx-source": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.2.3",
+    "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.2.0",
-    "autoprefixer": "9.4.4",
+    "@babel/runtime": "7.3.1",
+    "autoprefixer": "9.4.7",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "8.0.5",
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-vue-jsx": "4.0.1",
-    "clean-webpack-plugin": "1.0.0",
+    "clean-webpack-plugin": "1.0.1",
     "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.2.0",
     "css-loader": "1.0.0",
@@ -112,22 +112,24 @@
     "html-webpack-inline-chunk-plugin": "1.1.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
-    "koa-webpack": "5.1.1",
-    "lint-staged": "8.1.0",
+    "jquery": "3.3.1",
+    "koa-webpack": "5.2.1",
+    "lint-staged": "8.1.3",
     "mini-css-extract-plugin": "0.5.0",
     "moment-locales-webpack-plugin": "1.0.7",
     "node-sass": "4.11.0",
+    "popper.js": "1.14.7",
     "postcss-loader": "3.0.0",
-    "prettier": "1.15.3",
+    "prettier": "1.16.4",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.1",
+    "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
-    "vue-loader": "15.5.0",
-    "vue-template-compiler": "2.5.21",
-    "webpack": "4.28.3",
+    "vue-loader": "15.6.2",
+    "vue-template-compiler": "2.6.5",
+    "webpack": "4.28.4",
     "webpack-bundle-analyzer": "3.0.3",
-    "webpack-cli": "3.2.0",
+    "webpack-cli": "3.2.3",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-merge": "4.2.1",
     "webpack-node-externals": "1.7.2"
