--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "bootstrap": "4.3.1",
     "chalk": "2.4.2",
     "consolidate": "0.15.1",
+    "core-js": "3.0.1",
+    "got": "9.6.0",
     "koa": "2.7.0",
     "koa-body": "4.1.0",
     "koa-compress": "3.0.0",
@@ -65,45 +67,50 @@
     "koa-history-api-fallback": "0.1.3",
     "koa-morgan": "1.0.1",
     "koa-mount": "4.0.0",
+    "koa-pino-logger": "2.1.3",
     "koa-router": "7.4.0",
     "koa-session": "5.10.1",
     "koa-static": "5.0.0",
-    "koa-views": "6.1.5",
+    "koa-views": "6.2.0",
     "lodash": "4.17.11",
     "lodash.isempty": "4.4.0",
+    "make-dir": "3.0.0",
     "moment": "2.24.0",
     "nunjucks": "3.2.0",
+    "pino": "5.12.2",
+    "pino-pretty": "2.6.1",
     "pm2": "3.4.0",
-    "qs": "6.6.0",
+    "qs": "6.7.0",
     "request": "2.88.0",
     "request-debug": "0.2.0",
-    "url-parse": "1.4.4",
+    "tunnel": "0.0.6",
+    "url-parse": "1.4.6",
     "vue": "2.6.10",
-    "vue-router": "3.0.2",
+    "vue-router": "3.0.6",
     "whatwg-fetch": "2.0.4",
     "winston": "2.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
+    "@babel/cli": "7.4.3",
+    "@babel/core": "7.4.3",
     "@babel/helper-module-imports": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.3.2",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "7.4.3",
     "@babel/plugin-transform-react-jsx-source": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.3.1",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.3.1",
-    "autoprefixer": "9.4.7",
+    "@babel/runtime": "7.4.3",
+    "autoprefixer": "9.5.1",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "8.0.5",
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-vue-jsx": "4.0.1",
-    "clean-webpack-plugin": "1.0.1",
+    "clean-webpack-plugin": "2.0.1",
     "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.2.0",
     "css-loader": "1.0.0",
@@ -112,23 +119,24 @@
     "html-webpack-inline-chunk-plugin": "1.1.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
-    "jquery": "3.3.1",
+    "jquery": "3.4.0",
     "koa-webpack": "5.2.1",
     "lint-staged": "8.1.5",
     "mini-css-extract-plugin": "0.5.0",
     "moment-locales-webpack-plugin": "1.0.7",
     "node-sass": "4.11.0",
-    "popper.js": "1.14.7",
+    "nodemon": "1.18.11",
+    "popper.js": "1.15.0",
     "postcss-loader": "3.0.0",
-    "prettier": "1.16.4",
+    "prettier": "1.17.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.2",
+    "terser-webpack-plugin": "1.2.3",
     "url-loader": "1.1.2",
     "vue-loader": "15.7.0",
     "vue-template-compiler": "2.6.10",
     "webpack": "4.28.4",
-    "webpack-bundle-analyzer": "3.0.3",
+    "webpack-bundle-analyzer": "3.3.2",
     "webpack-cli": "3.2.3",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-merge": "4.2.1",
@@ -146,7 +154,9 @@
       "build/node",
       "routes/",
       "utils/",
-      "services/"
+      "services/",
+      "app-config.js",
+      "app.js"
     ]
   }
 }
