--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-web-kit",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "A modern, production-ready, and full-stack node web framework with Vue.js",
   "main": "index.js",
   "scripts": {
@@ -14,11 +14,10 @@
     "node": "webpack --progress --config config/webpack.config.node.js",
     "prod": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
     "report": "cross-env NODE_ENV=production BUNDLE_ANALYZER=true webpack -p --progress --hide-modules --config config/webpack.config.prod.js",
-    "test": "npm run build:dev && npm run build",
-    "precommit": "lint-staged"
+    "test": "npm run build:dev && npm run build"
   },
   "engines": {
-    "node": ">= 8"
+    "node": ">= 8.12"
   },
   "husky": {
     "hooks": {
@@ -26,12 +25,10 @@
     }
   },
   "lint-staged": {
-    "linters": {
-      "**/*.{js,jsx,vue,scss,json,html}": [
-        "prettier --write",
-        "git add"
-      ]
-    }
+    "**/*.{js,jsx,vue,scss,json,html}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -57,86 +54,82 @@
     "bootstrap": "4.3.1",
     "chalk": "2.4.2",
     "consolidate": "0.15.1",
-    "core-js": "3.0.1",
+    "core-js": "3.4.1",
     "got": "9.6.0",
-    "koa": "2.7.0",
-    "koa-body": "4.1.0",
+    "koa": "2.11.0",
+    "koa-body": "4.1.1",
     "koa-compress": "3.0.0",
-    "koa-convert": "1.2.0",
-    "koa-helmet": "4.1.0",
-    "koa-history-api-fallback": "0.1.3",
+    "koa-helmet": "5.2.0",
+    "koa-history-api-fallback": "1.0.0",
     "koa-morgan": "1.0.1",
     "koa-mount": "4.0.0",
     "koa-pino-logger": "2.1.3",
     "koa-router": "7.4.0",
-    "koa-session": "5.10.1",
+    "koa-session": "5.12.3",
     "koa-static": "5.0.0",
-    "koa-views": "6.2.0",
-    "lodash": "4.17.11",
+    "koa-views": "6.2.1",
+    "lodash": "4.17.15",
     "lodash.isempty": "4.4.0",
     "make-dir": "3.0.0",
     "moment": "2.24.0",
     "nunjucks": "3.2.0",
-    "pino": "5.12.2",
-    "pino-pretty": "2.6.1",
+    "pino": "5.13.6",
+    "pino-pretty": "3.3.0",
     "pm2": "3.4.0",
-    "qs": "6.7.0",
     "tunnel": "0.0.6",
-    "url-parse": "1.4.6",
     "vue": "2.6.10",
-    "vue-router": "3.0.6",
+    "vue-router": "3.1.3",
     "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.3",
-    "@babel/core": "7.4.3",
-    "@babel/helper-module-imports": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@babel/cli": "7.7.0",
+    "@babel/core": "7.7.2",
+    "@babel/helper-module-imports": "7.7.0",
+    "@babel/plugin-proposal-class-properties": "7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.6.2",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "7.4.3",
-    "@babel/plugin-transform-react-jsx-source": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.4.3",
-    "@babel/preset-env": "7.4.3",
-    "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.4.3",
-    "autoprefixer": "9.5.1",
+    "@babel/plugin-transform-modules-commonjs": "7.7.0",
+    "@babel/plugin-transform-react-jsx-source": "7.5.0",
+    "@babel/plugin-transform-runtime": "7.6.2",
+    "@babel/preset-env": "7.7.1",
+    "@babel/runtime": "7.7.2",
+    "autoprefixer": "9.7.1",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "babel-loader": "8.0.5",
+    "babel-loader": "8.0.6",
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-vue-jsx": "4.0.1",
-    "clean-webpack-plugin": "2.0.1",
-    "copy-webpack-plugin": "4.6.0",
-    "cross-env": "5.2.0",
-    "css-loader": "1.0.0",
-    "file-loader": "1.1.11",
+    "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "5.0.5",
+    "cross-env": "6.0.3",
+    "css-loader": "3.2.0",
+    "file-loader": "4.2.0",
     "html-loader": "0.5.5",
     "html-webpack-inline-chunk-plugin": "1.1.1",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.3.1",
-    "jquery": "3.4.0",
-    "koa-webpack": "5.2.1",
-    "lint-staged": "8.1.5",
-    "mini-css-extract-plugin": "0.5.0",
-    "moment-locales-webpack-plugin": "1.0.7",
-    "node-sass": "4.11.0",
-    "nodemon": "1.18.11",
-    "popper.js": "1.15.0",
+    "husky": "3.0.9",
+    "jquery": "3.4.1",
+    "koa-webpack": "5.2.4",
+    "lint-staged": "9.4.2",
+    "mini-css-extract-plugin": "0.8.0",
+    "moment-locales-webpack-plugin": "1.1.0",
+    "node-sass": "4.13.0",
+    "nodemon": "1.19.4",
+    "popper.js": "1.16.0",
     "postcss-loader": "3.0.0",
-    "prettier": "1.17.0",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.3",
-    "url-loader": "1.1.2",
-    "vue-loader": "15.7.0",
+    "prettier": "1.19.1",
+    "sass-loader": "7.3.1",
+    "style-loader": "1.0.0",
+    "terser-webpack-plugin": "2.2.1",
+    "url-loader": "2.2.0",
+    "vue-loader": "15.7.2",
     "vue-template-compiler": "2.6.10",
-    "webpack": "4.28.4",
-    "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.2.3",
-    "webpack-manifest-plugin": "2.0.4",
-    "webpack-merge": "4.2.1",
+    "webpack": "4.41.2",
+    "webpack-bundle-analyzer": "3.6.0",
+    "webpack-cli": "3.3.10",
+    "webpack-manifest-plugin": "2.2.0",
+    "webpack-merge": "4.2.2",
     "webpack-node-externals": "1.7.2"
   },
   "browserslist": [
